# communodocs

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-github-pages.yaml
communodocs/: mkdocs.yml
communodocs/docs/: _nav.md  index.md
communodocs/docs/assets/: extra.css
communodocs/docs/aws/lambda/: swagger.md
communodocs/docs/ia/: agents.md  copilot_studio.md  index.md  prompts.md
communodocs/docs/ia/MCP/: mcp_test.md
communodocs/docs/ia/agents/: langchain_video_node.md  mcp_node.md  openapi_node.md
communodocs/docs/ia/agents/mcp_nodes/: huggingface_mcp_node.md
communodocs/docs/ia/aws/: get_credentials.md
communodocs/docs/ia/workflow_tools/: compare.md
communodocs/docs/kubernetes/: tips.md
communodocs/docs/linux/: ubuntu_debian.md
communodocs/docs/process_guidelines/: coding_rules.md
communodocs/docs/tools/: marp.md
communodocs/docs/tools/ide/: vscode.md
communodocs/docs/tools/linux_env/: liquidprompt.md
communodocs/files/: GitLab_CI_Modularization_Presentation.html  GitLab_CI_Modularization_Presentation.md  aws_doc_mcp.json  fixed-jira-swagger.yaml  liquidpromptrc
