[project]
name = "communodocs"
version = "0.0.0"
requires-python = "~=3.13.0"
dependencies = [
  "autolink-references-mkdocs-plugin~=0.2",
  "mkdocs-git-revision-date-localized-plugin~=1.4",
  "mkdocs-glightbox~=0.5",
  "mkdocs-literate-nav~=0.6",
  "mkdocs-material~=9.3",
  "mkdocs-include-markdown-plugin~=1.0",
  "mkdocs~=1.6",
]

[tool.uv]
package = false
